--- a/doc/ProgressReport/document.tex
+++ b/doc/ProgressReport/document.tex
@@ -104,28 +104,29 @@ Tujuan pembuatan dan penulisan skripsi ini adalah sebagai berikut:
 
 \section{Detail Perkembangan Pengerjaan Skripsi}
 Detail bagian pekerjaan skripsi sesuai dengan rencan kerja/laporan perkembangan terkahir :
-	\begin{enumerate}
-		\item \textbf{Memahami dan mengerti cara kerja \textit{framework} \textit{code igniter} dan \textit{bootstrap}.}\\
-		{\bf Status :} Ada sejak rencana kerja skripsi.\\
-		{\bf Hasil :} Sudah mengerti cara penggunaan \textit{code igniter} dan \textit{bootstrap} dengan membaca dokumentasi pada situs tersebut dan menuangkannya pada landasan teori.
+
+\begin{enumerate}
+	\item \textbf{Memahami dan mengerti cara kerja \textit{framework} \textit{code igniter} dan \textit{bootstrap}.}\\
+	{\bf Status :} Ada sejak rencana kerja skripsi.\\
+	{\bf Hasil :} Sudah mengerti cara penggunaan \textit{code igniter} dan \textit{bootstrap} dengan membaca dokumentasi pada situs tersebut dan menuangkannya pada landasan teori.
 		
-		\item \textbf{Melakukan survei ke mahasiswa, tata usaha, dan dosen untuk memahami kebutuhan pengguna}\\
-		{\bf Status :} Ada sejak rencana kerja skripsi.\\
-		{\bf Hasil :} Survei telah dilakukan menggunakan \textit{google form} dan telah mendapatkan 14 responden. Bukti-bukti survei dapat dilihat pada lampiran dokumen skripsi.
+	\item \textbf{Melakukan survei ke mahasiswa, tata usaha, dan dosen untuk memahami kebutuhan pengguna}\\
+	{\bf Status :} Ada sejak rencana kerja skripsi.\\		
+	{\bf Hasil :} Survei telah dilakukan menggunakan \textit{google form} dan telah mendapatkan 14 responden. Bukti-bukti survei dapat dilihat pada lampiran dokumen skripsi.
 
-		\item \textbf{Menganalisa fitur kebutuhan bersama pembimbing }\\
-		{\bf Status :} Ada sejak rencana kerja skripsi.\\
-		{\bf Hasil :} Setelah terkumpul jawaban responden, selanjutnya dibuat \textit{issue} pada \textit{github} yang dapat diakses pada \url{https://github.com/stephenhadi/BlueTape/issues}. Analisis bersama pembimbing dilakukan saat bimbingan dan analisis dapat dilihat pada Bab 3 dokumen skripsi.
+	\item \textbf{Menganalisa fitur kebutuhan bersama pembimbing }\\
+	{\bf Status :} Ada sejak rencana kerja skripsi.\\
+	{\bf Hasil :} Setelah terkumpul jawaban responden, selanjutnya dibuat \textit{issue} pada \textit{github} yang dapat diakses pada \url{https://github.com/stephenhadi/BlueTape/issues}. Analisis bersama pembimbing dilakukan saat bimbingan dan analisis dapat dilihat pada Bab 3 dokumen skripsi.
 
-		\item \textbf{Merancang dan mengimplementasi hasil survei}\\
-		{\bf Status :} Ada sejak rencana kerja skripsi.\\
-		{\bf Hasil :} Hasil survei yang telah dianalisis akan dikerjakan telah diimplementasi dengan mengikuti aturan yang telah ditetapkan oleh pembimbing. Hasil implementasi dapat dilihat pada \url{https://github.com/stephenhadi/BlueTape/pulls}.		
+	\item \textbf{Merancang dan mengimplementasi hasil survei}\\
+	{\bf Status :} Ada sejak rencana kerja skripsi.\\
+	{\bf Hasil :} Hasil survei yang telah dianalisis akan dikerjakan telah diimplementasi dengan mengikuti aturan yang telah ditetapkan bersama pembimbing. Hasil implementasi dapat dilihat pada \url{https://github.com/stephenhadi/BlueTape/pulls}.		
 		
-		\item \textbf{Menulis dokumen skripsi}\\
-		{\bf Status :} Ada sejak rencana kerja skripsi.\\
-		{\bf Hasil :} Dokumen skripsi telah dikerjakan sampai Bab 3, namun ada beberapa landasan teori baru yang belum sempat ditambahkan pada Bab 2 skripsi ini.		
+	\item \textbf{Menulis dokumen skripsi}\\
+	{\bf Status :} Ada sejak rencana kerja skripsi.\\
+	{\bf Hasil :} Dokumen skripsi telah dikerjakan sampai Bab 3, namun ada beberapa landasan teori baru yang belum sempat ditambahkan pada Bab 2 skripsi ini.		
 
-	\end{enumerate}
+\end{enumerate}
 
 \section{Pencapaian Rencana Kerja}
 Langkah-langkah kerja yang berhasil diselesaikan dalam Skripsi 1 ini adalah sebagai berikut:
